force-app/main/default/objects/Promotion__c/Promotion__c.object-meta.xml
<CustomObject>
    <description>Captures the promotions available for clients. Utilized to calculate promotion discount on the SBQQ_QuoteLine.</description>
    <label>Promotion</label>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>