force-app/main/default/objects/Promotion__c/fields/All_Products__c.field-meta.xml
<CustomField>
    <fullName>All_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Products</label>
    <type>Checkbox</type>
</CustomField>