force-app/main/default/objects/Promotion__c/fields/Applicable_Product__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the Product this Promotion Code applies to.</description>
    <inlineHelpText>Indicates the Product this Promotion Code applies to.</inlineHelpText>
    <label>Applicable Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>