force-app/main/default/objects/Promotion__c/fields/Applicable_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Product_Code__c</fullName>
    <description>Code for the Product referenced by this Promotion.</description>
    <formula>Applicable_Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Code for the Product referenced by this Promotion.</inlineHelpText>
    <label>Applicable Product Code</label>
    <type>Text</type>
</CustomField>