force-app/main/default/objects/Promotion__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Captures the general description of the promotion.</description>
    <inlineHelpText>Indicates the general description of the promotion.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>