force-app/main/default/objects/Promotion__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Captures the percentage off provided by the promotion.</description>
    <inlineHelpText>Indicates the percentage off provided by the promotion.</inlineHelpText>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>