force-app/main/default/objects/Promotion__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Captures the date the promotion ends, when applicable.</description>
    <inlineHelpText>Indicates the date the promotion ends, when applicable.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>