force-app/main/default/objects/Promotion__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Captures External ID to simplify migrations.</description>
    <inlineHelpText>Captures External ID to simplify migrations.</inlineHelpText>
    <label>External ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>