force-app/main/default/objects/Promotion__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures whether the promo code is active and is available to use.</description>
    <inlineHelpText>Indicates whether the promo code is active and is available to use.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>