force-app/main/default/objects/Promotion__c/fields/No_Commission__c.field-meta.xml
<CustomField>
    <fullName>No_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Commission</label>
    <type>Checkbox</type>
</CustomField>