force-app/main/default/objects/Promotion__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in price rules for net amount to take precedence over other discounts</description>
    <label>Priority</label>
    <type>Checkbox</type>
</CustomField>