force-app/main/default/objects/Promotion__c/fields/Promotional_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Code__c</fullName>
    <description>Captures the promotional code. Used as matching variable during quoting.</description>
    <inlineHelpText>Indicates the promotional code. Used as matching variable during quoting.</inlineHelpText>
    <label>Promotional Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>