force-app/main/default/objects/Promotion__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Captures the date the promotion is available for use, when applicable.</description>
    <inlineHelpText>Indicates the date the promotion is available for use, when applicable.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>