force-app/main/default/objects/Promotion__c/listViews/Active_Promotions.listView-meta.xml
<ListView>
    <fullName>Active_Promotions</fullName>
    <columns>NAME</columns>
    <columns>Promotional_Code__c</columns>
    <columns>Discount__c</columns>
    <columns>Applicable_Product__c</columns>
    <columns>Applicable_Product_Code__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Description__c</columns>
    <columns>IsActive__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Priority__c</columns>
    <columns>No_Commission__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Promotions</label>
</ListView>